# Projeto-PI

./: .gitignore  CMakeLists.txt  README.md  build_windows.bat  build_windows.ps1  main.cpp  run_linux.sh
src/: fase_corrida.h  fase_natacao.h  game.cpp  game.h  main.cpp  menu.cpp  menu.h
